--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -171,6 +171,8 @@
     <ClInclude Include="..\imgui\stb_rect_pack.h" />
     <ClInclude Include="..\imgui\stb_textedit.h" />
     <ClInclude Include="..\imgui\stb_truetype.h" />
+    <ClInclude Include="..\liquidfun_contrib\ConvexDecomposition\b2Polygon.h" />
+    <ClInclude Include="..\liquidfun_contrib\ConvexDecomposition\b2Triangle.h" />
     <ClInclude Include="..\LTBL2\src\LightDirectionEmission.hpp" />
     <ClInclude Include="..\LTBL2\src\LightPointEmission.hpp" />
     <ClInclude Include="..\LTBL2\src\LightResources.hpp" />
@@ -222,6 +224,8 @@
     <ClCompile Include="..\imgui\imgui.cpp" />
     <ClCompile Include="..\imgui\imgui_demo.cpp" />
     <ClCompile Include="..\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\liquidfun_contrib\ConvexDecomposition\b2Polygon.cpp" />
+    <ClCompile Include="..\liquidfun_contrib\ConvexDecomposition\b2Triangle.cpp" />
     <ClCompile Include="..\LTBL2\src\LightDirectionEmission.cpp" />
     <ClCompile Include="..\LTBL2\src\LightPointEmission.cpp" />
     <ClCompile Include="..\LTBL2\src\LightShape.cpp" />
