--- a/DemoProject/DemoProject.vcxproj
+++ b/DemoProject/DemoProject.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BrickBackground.cpp" />
+    <ClCompile Include="CeilingLamp.cpp" />
     <ClCompile Include="DemoApp.cpp" />
     <ClCompile Include="FSEObject\GameLevel.cpp" />
     <ClCompile Include="FSEObject\ConcreteBlock.cpp" />
@@ -28,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BrickBackground.h" />
+    <ClInclude Include="CeilingLamp.h" />
     <ClInclude Include="DemoApp.h" />
     <ClInclude Include="FSEObject\GameLevel.h" />
     <ClInclude Include="FSEObject\ConcreteBlock.h" />
