--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -88,7 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\SFML-2.4.2-x86\include;C:\liquidfun\liquidfun\Box2D;C:\rttr-0.9.6-win32-vs2017\include;..\imgui-sfml-config\;..\imgui;..\imgui-sfml;..\rapidjson\include;..\poly2tri\poly2tri;..\chaiscript\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SFML-2.4.2-x86\include;C:\liquidfun\liquidfun\Box2D;..\extlibs\rttr-0.9.6-win32-vs2017\include;..\imgui-sfml-config\;..\imgui;..\imgui-sfml;..\rapidjson\include;..\poly2tri\poly2tri;..\chaiscript\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CreateHotpatchableImage>true</CreateHotpatchableImage>
       <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -102,7 +102,7 @@
       <NoEntryPoint>true</NoEntryPoint>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>C:\liquidfun\liquidfun\build\Box2D\Debug;C:\SFML-2.4.2-x86\lib;C:\rttr-0.9.6-win32-vs2017\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\liquidfun\liquidfun\build\Box2D\Debug;C:\SFML-2.4.2-x86\lib;..\extlibs\rttr-0.9.6-win32-vs2017\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-system-s-d.lib;sfml-window-s-d.lib;sfml-graphics-s-d.lib;sfml-network-s-d.lib;opengl32.lib;freetype.lib;jpeg.lib;winmm.lib;gdi32.lib;ws2_32.lib;liquidfun.lib;librttr_core_s_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
@@ -128,7 +128,7 @@
       <FunctionLevelLinking>false</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;SFML_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\SFML-2.4.2-x86\include;C:\liquidfun\liquidfun\Box2D;C:\rttr-0.9.6-win32-vs2017\include;..\imgui-sfml-config\;..\imgui;..\imgui-sfml;..\rapidjson\include;..\poly2tri\poly2tri;..\chaiscript\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\SFML-2.4.2-x86\include;C:\liquidfun\liquidfun\Box2D;..\extlibs\rttr-0.9.6-win32-vs2017\include;..\imgui-sfml-config\;..\imgui;..\imgui-sfml;..\rapidjson\include;..\poly2tri\poly2tri;..\chaiscript\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <LanguageStandard>stdcpp14</LanguageStandard>
@@ -142,7 +142,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>C:\liquidfun\liquidfun\build\Box2D\Release;C:\SFML-2.4.2-x86\lib;C:\rttr-0.9.6-win32-vs2017\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\liquidfun\liquidfun\build\Box2D\Release;C:\SFML-2.4.2-x86\lib;..\extlibs\rttr-0.9.6-win32-vs2017\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-system-s.lib;sfml-window-s.lib;sfml-graphics-s.lib;sfml-network-s.lib;opengl32.lib;freetype.lib;jpeg.lib;winmm.lib;gdi32.lib;ws2_32.lib;liquidfun.lib;librttr_core_s.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
