--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -222,6 +222,7 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneDebugger.h" />
+    <ClInclude Include="FSEObject\ScriptObject.h" />
     <ClInclude Include="Serialize.h" />
     <ClInclude Include="Signals.h" />
   </ItemGroup>
@@ -271,6 +272,7 @@
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneDebugger.cpp" />
+    <ClCompile Include="FSEObject\ScriptObject.cpp" />
     <ClCompile Include="Serialize.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
