--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -264,6 +264,9 @@
     <ClInclude Include="..\liquidfun_contrib\ConvexDecomposition\b2Triangle.h">
       <Filter>Header Files\liquidfun_contrib\ConvexDecomposition</Filter>
     </ClInclude>
+    <ClInclude Include="FSEObject\ScriptObject.h">
+      <Filter>Header Files\FSEObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
@@ -403,6 +406,9 @@
     </ClCompile>
     <ClCompile Include="..\imgui\imgui_widgets.cpp">
       <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="FSEObject\ScriptObject.cpp">
+      <Filter>Source Files\FSEObject</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
