--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "ChaiScript_Extras_Liquidfun"]
 	path = ChaiScript_Extras_Liquidfun
 	url = https://github.com/Alia5/ChaiScript_Extras_Liquidfun
+[submodule "ChaiScript_Extras_SFML"]
+	path = ChaiScript_Extras_SFML
+	url = git@github.com:Alia5/ChaiScript_Extras_SFML.git
