--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -228,6 +228,7 @@
     <ClInclude Include="Component\ScriptComponent.h" />
     <ClInclude Include="Serialize.h" />
     <ClInclude Include="Signals.h" />
+    <ClInclude Include="FSEObject\TileMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\imgui-sfml\imgui-SFML.cpp" />
@@ -278,6 +279,7 @@
     <ClCompile Include="FSEObject\ScriptObject.cpp" />
     <ClCompile Include="Component\ScriptComponent.cpp" />
     <ClCompile Include="Serialize.cpp" />
+    <ClCompile Include="FSEObject\TileMap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
