--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClInclude Include="FSEV8Lib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="v8bind.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
