--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -259,7 +259,7 @@
     <ClInclude Include="Serialize.h" />
     <ClInclude Include="Signals.h" />
     <ClInclude Include="FSEObject\TileMap.h" />
-    <ClInclude Include="v8bind.h" />
+    <ClInclude Include="v8ppconverters.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\imgui-sfml\imgui-SFML.cpp" />
