--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -225,6 +225,7 @@
     <ClInclude Include="..\poly2tri\poly2tri\sweep\sweep.h" />
     <ClInclude Include="..\poly2tri\poly2tri\sweep\sweep_context.h" />
     <ClInclude Include="AssetLoader.h" />
+    <ClInclude Include="extv8bind\liquidfunbind.h" />
     <ClInclude Include="FSEV8Lib.h" />
     <ClInclude Include="Component\Component.h" />
     <ClInclude Include="Component\SmoothViewController.h" />
@@ -238,6 +239,7 @@
     <ClInclude Include="FSEObject\KillVolume.h" />
     <ClInclude Include="ImageOutlineFinder.h" />
     <ClInclude Include="imgui-colorText.h" />
+    <ClInclude Include="extv8bind\liquidfunconvert.h" />
     <ClInclude Include="Network\NetworkedObject.h" />
     <ClInclude Include="Lights\Light.h" />
     <ClInclude Include="Lights\FSELightWorld.h" />
