--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -141,8 +141,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>sfml-system-s-d.lib;sfml-window-s-d.lib;sfml-graphics-s-d.lib;sfml-network-s-d.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;ws2_32.lib;liquidfun.lib;librttr_core_s_d.lib;v8pp.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\extlibs\liquidfun\liquidfun\build\Box2D\Debug;..\extlibs\SFML-2.5.1-x64\lib;..\extlibs\rttr-0.9.6-x64\lib;..\v8pp\bin\Debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sfml-system-s-d.lib;sfml-window-s-d.lib;sfml-graphics-s-d.lib;sfml-network-s-d.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;ws2_32.lib;liquidfun.lib;librttr_core_s_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\extlibs\liquidfun\liquidfun\build\Box2D\Debug;..\extlibs\SFML-2.5.1-x64\lib;..\extlibs\rttr-0.9.6-x64\lib</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -187,7 +187,7 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>..\extlibs\SFML-2.5.1-x64\include;..\extlibs\liquidfun\liquidfun\Box2D;..\extlibs\rttr-0.9.6-x64\include;..\imgui-sfml-config\;..\chaiscript\include\;..\ChaiScript_Extras\include\;..\ChaiScript_Extras_Liquidfun\include\;..\ChaiScript_Extras_SFML\include\;..\imgui\;..\imgui-SFML\;..\rapidjson\include;..\poly2tri\poly2tri;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\extlibs\SFML-2.5.1-x64\include;..\extlibs\liquidfun\liquidfun\Box2D;..\extlibs\rttr-0.9.6-x64\include;..\imgui-sfml-config\;..\chaiscript\include\;..\ChaiScript_Extras\include\;..\ChaiScript_Extras_Liquidfun\include\;..\ChaiScript_Extras_SFML\include\;..\imgui\;..\imgui-SFML\;..\rapidjson\include;..\poly2tri\poly2tri;..\v8pp;..\extlibs\v8_monolith\include;..\websocketpp;..\extlibs\asio\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -196,8 +196,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>sfml-system-s.lib;sfml-window-s.lib;sfml-graphics-s.lib;sfml-network-s.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;ws2_32.lib;liquidfun.lib;librttr_core_s.lib;v8pp.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\extlibs\liquidfun\liquidfun\build\Release;..\extlibs\SFML-2.5.1-x64\lib;..\extlibs\rttr-0.9.6-x64\lib;..\v8pp\bin\Release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sfml-system-s.lib;sfml-window-s.lib;sfml-graphics-s.lib;sfml-network-s.lib;opengl32.lib;freetype.lib;winmm.lib;gdi32.lib;ws2_32.lib;liquidfun.lib;rttr_core_lib_s.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\extlibs\liquidfun\liquidfun\build\Box2D\Release;..\extlibs\SFML-2.5.1-x64\lib;..\extlibs\rttr-0.9.6-x64\lib;..\v8pp\bin\Release</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
