--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -312,6 +312,9 @@
     <ClInclude Include="FSEObject\ScriptObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Component\ScriptComponent.h">
+      <Filter>Header Files\Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
@@ -469,6 +472,9 @@
     </ClCompile>
     <ClCompile Include="FSEObject\ScriptObject.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Component\ScriptComponent.cpp">
+      <Filter>Source Files\Component</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
